# test_task_hq

./: .gitignore  Makefile  README.md  black.toml  pyproject.toml
src/system_training/: manage.py
src/system_training/app/: models.py  serializers.py  urls.py  views.py
src/system_training/app/management/commands/: filling_db.py
src/system_training/system_training/: asgi.py  settings.py  urls.py  wsgi.py
